--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "pm_start": "pm2 kill && pm2 start bin/www --watch --ignore-watch=\"data/* sessions/* public/images* \" && pm2 log"
   },
   "dependencies": {
+    "bufferutil": "^4.0.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
@@ -30,6 +31,8 @@
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0",
     "session-file-store": "^1.5.0",
+    "socket.io": "^3.0.4",
+    "utf-8-validate": "^5.0.3",
     "uuid": "^8.3.1"
   }
 }
